Lazy Loading Tabs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,9 @@
   <dev-tab header="Tab 2">
     Hello I am Tab 2 :)
   </dev-tab>
+  <dev-tab header="Tab 3">
+    <ng-template #content>
+      Hello I am Tab 3
+    </ng-template>
+  </dev-tab>
 </dev-tabview>
