--- a/src/app/tabview/tab/tab.component.html
+++ b/src/app/tabview/tab/tab.component.html
@@ -1,1 +1,6 @@
-<div [hidden]="!active"><ng-content></ng-content></div>
+<div [hidden]="!active">
+  <ng-template [ngIf]="lazyContent && loaded">
+    <ng-container *ngTemplateOutlet="lazyContent"> </ng-container>
+  </ng-template>
+  <ng-content></ng-content>
+</div>
