Custom Header Template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,13 @@
       Hello I am Tab 3 and I have been Lazy Loaded!
     </ng-template>
   </dev-tab>
+  <dev-tab>
+    <ng-template #header>
+      I am a Template Header!
+    </ng-template>
+
+    <ng-template #content>
+      Hello I am a new Tab and my Header is defined inside a Template!
+    </ng-template>
+  </dev-tab>
 </dev-tabview>
